# bfscale

./: .gitignore  Best_Fit.py  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: python-build.yml  python-package.yml  python-publish.yml  python-release.yml  python-test.yml
src/bfscale/: __init__.py
tests/: test_resize.py
tests/test_resize/: billiards-normal.tif  billiards-scaled.tif  billiards-scaled2.tif  billiards-scaled240.tif  billiards-smallest.tif  coffee-rectangle.tif  coffee-scaled-squish.tif  coffee-scaled.tif
