[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bfscale"
version = "0.1.0"
authors = [
	{ name="GroveDG", email="grovedgdev@gmail.com"}
]
description = "Best fit image scaling"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	'numpy >= 1.13',
]

[project.optional-dependencies]
dev = [
    "imageio"
]

[project.urls]
"Homepage" = "https://github.com/GroveDG/bfscale"
"Bug Tracker" = "https://github.com/GroveDG/bfscale/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
